#2258 Optimise CollectionUtil.listCopy